del links index.html

--- a/pages/info/info.html
+++ b/pages/info/info.html
@@ -51,10 +51,10 @@
     <header>
       <nav>
         <ul class="menu-main">
-          <li><a href="../../index.html">Главная</a></li>
-          <li><a href="../../index.html#textguslivnal">Гусли в наличии</a></li>
-          <li><a href="../../index.html#contactsjump">Контакты</a></li>
-          <li><a href="../../index.html#reviews">Отзывы</a></li>
+          <li><a href="/">Главная</a></li>
+          <li><a href="/#textguslivnal">Гусли в наличии</a></li>
+          <li><a href="/#contactsjump">Контакты</a></li>
+          <li><a href="/#reviews">Отзывы</a></li>
         </ul>
       </nav>
     </header>
@@ -92,7 +92,7 @@
             пожалуй, один из самых интересных народных инструментов. И если вы
             думаете, что их жизнь ушла в прошлое, то это совсем не так, все больше
             людей узнают и проявляют интерес к этому инструменту.</br></br>
-            Купить гусли можно <a href="../../index.html">ЗДЕСЬ</a>
+            Купить гусли можно <a href="/">ЗДЕСЬ</a>
         </div>
     </article>
   </body>
