--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -56,7 +56,7 @@
     <header>
       <nav>
         <ul class="menu-main">
-          <li><a href="../../index.html">Гусли</a></li>
+          <li><a href="/">Гусли</a></li>
           <li><a href="../infolira/infolira.html">О Лирах</a></li>
           <li><a href="#textvnal">Лиры в наличии</a></li>
           <li><a href="#contactsjump">Контакты</a></li>
@@ -72,7 +72,7 @@
         приобретения инструмента и вопросам свяжитесь со мной по данным
         <a href="#contactsjump">контактам</a>. Возможна отправка в другие
         страны. Условия доставки и оплаты согласовываются индивидуально.Также
-        изготавливаю <a href="../../index.html">ГУСЛИ</a>
+        изготавливаю <a href="/">ГУСЛИ</a>
       </p>
 
       <h1 id="textvnal">Лиры в наличии:</h1>
