--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Изготовление и продажа гуслей, здесь можно приобрести гусли крыловидные ручной работы по доступной цене. Россия, Беларусь, Казахстан. Гусли музыкальный инструмент, какие гусли, гусли музыка, играющие народные гусли"
+      content="Изготовление и продажа гуслей, здесь можно приобрести гусли крыловидные ручной работы по доступной цене. Гусли музыкальный инструмент, какие гусли, гусли музыка, играющие народные гусли"
     />
     <meta
       name="keywords"
