--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -100,7 +100,7 @@
 
           <li>
             <h2 class="textproduct">
-              Лира Кравик / Kravik Lyre №2, 7 струн,<br />цена: 300 BYN
+              Лира Кравик / Kravik Lyre №2, 7 струн,<br />цена: 300 Br
             </h2>
           </li>
           <div class="hidden-photos">
