--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
     <main>
       <p class="upcontent">
-       Где купить гусли? egusli.by здесь можно ознакомиться с инструментами, какие гусли выбрать
-        себе.
+       Где купить гусли? egusli.by здесь можно ознакомиться с музыкальными инструментами, выбрать
+         какие гусли купить себе.
       </p>
 
       <a href="#myworks"
