--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </a>
 
       <p class="content">
-        Приветствую! Ищите где купить гусли? Меня зовут Евгений и я занимаюсь изготовлением старинного
+        Приветствую! Меня зовут Евгений и я занимаюсь изготовлением старинного
         щипкового музыкального инструмента-
         <a href="./pages/info/info.html">Гусли</a>, в Беларуси. Это инструмент,
         позволяющий извлекать совершенно гармоничные сочетания звуков с
