--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Гусли купить, недорого, гусли из Беларуси, гусли инструмент, гусли
-      музыкальный, старинный струнный инструмент, кантеле, гусли музыка, гусли
-      слушать, играющие гусли, народные гусли.
+      Гусли купить, недорого, музыкальный инструмент гусли, старинный струнный
+      инструмент, цена, кантеле.
     </title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
@@ -98,8 +97,8 @@
 
     <main>
       <p class="upcontent">
-       Где купить гусли? egusli.by здесь можно ознакомиться с музыкальными инструментами, выбрать
-         какие гусли купить себе.
+        Где купить гусли? egusli.by здесь можно ознакомиться с музыкальными
+        инструментами, выбрать какие гусли купить себе.
       </p>
 
       <a href="#myworks"
@@ -175,7 +174,6 @@
           </div>
         </ul>
 
-
         <ul class="images images1">
           <li class="visible">
             <img src="images/product/3/1.jpg" alt="Гусли-изображение-1" />
@@ -191,7 +189,6 @@
             <img src="images/product/3/4.jpg" alt="Гусли-изображение-3" />
           </div>
         </ul>
-
 
         <ul class="images images1">
           <li class="visible">
@@ -287,7 +284,6 @@
           </div>
         </ul>
       </div>
-
     </main>
 
     <footer>
@@ -317,14 +313,9 @@
             </a>
           </h3>
 
-
           <h3>
             <a class="center" href="https://vk.com/egusli" target="_blank">
-              <img
-                class="vk-icon-img"
-                src="images/vk.png"
-                alt="vk.com"
-              />
+              <img class="vk-icon-img" src="images/vk.png" alt="vk.com" />
               &nbsp; ВКонтакте
             </a>
           </h3>
