--- a/pages/en/en.html
+++ b/pages/en/en.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Manufacture and sale of ancient musical instruments, here you can buy handmade instruments at an affordable price. KANTELE PSALTERY KRAVIK-LYRE GUSLI KOKLE LYRE KANNEL KANKLES"
+      content="Manufacture and sale of ancient musical instruments, here you can buy handmade instruments at an affordable price."
     />
     <meta
       name="keywords"
